# ros2-vio-node

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  package.xml  remake.sh
docs/: SRS_ESKF.md  tracking.mermaid
include/euroc_vio/: AHRS.hpp  AbstractLoader.hpp  CircularBuffer.hpp  DatumFast.hpp  DatumImu.hpp  DatumTruth.hpp  Eigen.hpp  EigenFormat.hpp  ErrorStateKalmanFilter.hpp  EuRoC.hpp  IQR.hpp  ImuKinematics.hpp  Integrator.hpp  Interpolation.hpp  InvSqrt.hpp  PerlinNoise.hpp  QuEst.hpp  Reflect.hpp  SensorState.hpp  SensorYaml.hpp  StereoObservation.hpp  TrackingConfig.hpp  ZUPT.hpp  abstractpublisher.hpp  ahrs.hpp  groundtruthpublisher.hpp  imupublisher.hpp  imustate.hpp  imuworker.hpp  invsqrt.hpp  main.h  pch.hpp  rcfilter.hpp  util.hpp  zupt.hpp
launch/: display.mav.py  est.py  euroc.py  fuse.py  imu.py  load.py  mono.py  sim.py  stereo.py  trajectory.mav.py
modules/: AbstractLoader.cppm  CircularBuffer.cppm  DatumFast.cppm  DatumImu.cppm  DatumTruth.cppm  ErrorStateKalmanFilter.cppm  Integrator.cpp  Integrator.cppm  Interpolation.cppm  SensorState.cppm  SensorYaml.cpp  SensorYaml.cppm  StdReflect.cppm  StereoObservation.cppm  ZUPT.cppm
msg/: AngularDisplacementAndUnitTranslation.msg  Imu.msg
rviz/: est.rviz  euroc.rviz  fuse.rviz  imu.rviz  loader.rviz  sim.rviz  sim_compare_truth_est.rviz  trajectory.rviz
scripts/: count_includes.sh  cpp_linter.sh  generate_delta_timestamp.py  inspect_ros2_target.sh  measure_timestamp_delay.py
scripts/ESKF_Optimizer/: config.yaml  opt.py
scripts/OrbSlam3/: OrbSlam3.sh
src/: QuEst.cpp  VisualSlam.cpp  csv_polyfit_plot.cpp  euroc_rk4_eval.cpp  imu.cpp  main.cpp  sim.cpp  vio.cpp
src/DataLoader/: AbstractLoader.hpp  DataLoader.cpp
src/ESKF_Optimizer/: README.md  config.yaml  measure_timestamp_delay.py  opt.py
src/EuRoC/: DataLoader.cpp
src/VisualSim/: Camera.cppm  Camera.hpp  DatumFast.hpp  DatumImu.hpp  DatumTruth.hpp  ErrorEvaluation.hpp  ErrorStateKalmanFilter.hpp  EstimationLoader.cpp  EvoSim3.hpp  ExtendedKalmanFilter.hpp  FuseKalman.cpp  ImuState.hpp  Integrator.hpp  LinearKalmanFilter.hpp  MeshPlot.cppm  MeshPlot.hpp  Path.cppm  Path.hpp  Preintegrate.hpp  Rect.hpp  Room.cppm  Room.hpp  SensorYaml.hpp  StereoRig.cppm  StereoRig.hpp  VisualInertial.cpp  VisualSim.cpp  zupt.hpp
src/VisualSlam/: CornerDetection.cppm  CornerDetection.hpp  EKF.hpp  Eigen.hpp  EightPointAlgorithm.hpp  EuRoC.cpp  EuRoC.cppm  EuRoC.hpp  FastDetector.cppm  FastDetector.hpp  ImageDataLoader.cppm  ImageDataLoader.hpp  OrbDetector.hpp  TomasiDetector.hpp  Util.hpp  VisualSlam.cpp  eskf.mermaid  flowchart.mermaid
urdf/: mav.urdf
